прикрутил правильно отображение лайкнувших

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <div id="app"></div>
   </body>
 
+<span></span><span></span><span></span>
+
   <script type="module" src="./index.js"></script>
 </html>
