--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
 
 <span></span><span></span><span></span>
 
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./dist/index.js"></script>
 </html>
